@startuml

interface BufferBuilder<R, U, T>
note top
    T type of actual database
    U Queue Type
    R BufferResult e.g. queue<T>
end note

interface IPushEventConsumer<T>
interface IPushEventSource<T>
interface IExecutor

class PromiseFactory

class PushEvent<T>
class PushStream<T> 
class PushStreamBuilder<T, U>
class PushStreamProvider <<final>>
class SimplePushEventSource<T>

SimplePushEventSource --|> IPushEventSource
SimplePushEventSource --> IExecutor

PushStream --> IExecutor
PushStream --> PromiseFactory
PushStream --> IPushEventSource

PushStreamProvider --> PushStream : creates
PushStreamProvider --> SimplePushEventSource : creates
PushStreamProvider --> PushStreamBuilder : use

PushStreamBuilder --|> BufferBuilder

@enduml